--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>Bio-data</title>
-        <link rel="icon" type="image" href="C:\web_developpment\images\favicon-16x16.png">
+        <link rel="icon" type="image" href="favicon-16x16.png">
         
         </head>
 <body>
     <div class="outer">
-        <div class="image"><img src="C:\web_developpment\images\sam1.jpg"></div>
+        <div class="image"><img src="sam1.jpg"></div>
         <h2>Shaik.sameena</h2>
     </div>
 </body>
