--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body{
                 </tr>
                 <tr class="content">
                     <td>Mobile No </td>
-                    <td>:- 1. 6304642614 <br>&nbsp; 2.9177761610</td>
+                    <td>:- 1. 63*********14 <br>&nbsp; 2.91*******10</td>
                 </tr>
             </table>
             </div>
